--- a/style.css
+++ b/style.css
@@ -183,12 +183,25 @@ nav li {
 }
 
 .three-part {
-    .two-part {
-        display: flex;
-        margin-bottom: 149px;
-        margin-top: 70px;
-        padding-left: 10%;
-        padding-right: 10%;
-        align-items: center;
-    }
+
+    display: flex;
+    margin-bottom: 149px;
+    margin-top: 70px;
+    padding-left: 10%;
+    padding-right: 10%;
+    align-items: center;
+
+}
+
+.spo-pic {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    /* grid-row-gap: 25px; */
+    justify-items: center;
+}
+
+.footer-text {
+    text-align: center;
+    padding-bottom: 0.5%;
+    padding-top: 0.5%;
 }
